# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: camera.cpp  camera.hpp  color.cpp  color.hpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  interval.cpp  interval.hpp  main.cpp  material.cpp  material.hpp  point.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  utils.hpp  vec.cpp  vec.hpp
